<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:shimmer_duration="1000">

            <include
                layout="@layout/layout_shimmer_payment_option"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.facebook.shimmer.ShimmerFrameLayout>

        <com.daniyal.payment.ui.views.RecyclerViewEmptySupport
            android:id="@+id/rv_paymentoption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</layout>